force-app/main/default/objects/AINavTab__mdt/AINavTab__mdt.object-meta.xml
<CustomObject>
    <description>Protected (managed package) parent record — one per top-level app tab. Controls navigation structure; subscriber org admins cannot view or edit these records directly.</description>
    <label>AI Nav Tab</label>
    <pluralLabel>AI Nav Tabs</pluralLabel>
</CustomObject>