force-app/main/default/objects/AINavTab__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the tab shows at all.</description>
    <inlineHelpText>Turn this off to hide the tab without removing its configuration.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>