force-app/main/default/objects/AINavTab__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Admin-facing note on what this tab is for.</description>
    <inlineHelpText>Briefly explain the purpose of this tab for future reviewers.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>