force-app/main/default/objects/AINavTab__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Left-to-right nav bar position.</description>
    <inlineHelpText>Set a number controlling where this tab appears relative to others.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>