force-app/main/default/objects/AINavTab__mdt/fields/ExternalURLOverride__c.field-meta.xml
<CustomField>
    <fullName>ExternalURLOverride__c</fullName>
    <description>Overrides Target Page with an external link.</description>
    <inlineHelpText>Enter a URL if this tab should link out rather than to an internal page.</inlineHelpText>
    <label>External URL Override</label>
    <type>Url</type>
</CustomField>