force-app/main/default/objects/AINavTab__mdt/fields/IsDefaultLandingTab__c.field-meta.xml
<CustomField>
    <fullName>IsDefaultLandingTab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Which tab opens when the app first loads.</description>
    <inlineHelpText>Turn this on for the one tab that should open by default.</inlineHelpText>
    <label>Is Default Landing Tab</label>
    <type>Checkbox</type>
</CustomField>