force-app/main/default/objects/AINavTab__mdt/fields/OpenInNewTab__c.field-meta.xml
<CustomField>
    <fullName>OpenInNewTab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this opens Target Page in a new browser tab.</description>
    <inlineHelpText>Turn this on if this tab should open externally rather than within the app.</inlineHelpText>
    <label>Open In New Tab</label>
    <type>Checkbox</type>
</CustomField>