force-app/main/default/objects/AINavTab__mdt/fields/TabEmoji__c.field-meta.xml
<CustomField>
    <fullName>TabEmoji__c</fullName>
    <description>Optional emoji override shown with or instead of the icon.</description>
    <inlineHelpText>Enter an emoji to display alongside or instead of the icon.</inlineHelpText>
    <label>Tab Emoji</label>
    <length>20</length>
    <type>Text</type>
</CustomField>