force-app/main/default/objects/AINavTab__mdt/fields/TabIcon__c.field-meta.xml
<CustomField>
    <fullName>TabIcon__c</fullName>
    <description>Icon rendered in the nav bar.</description>
    <inlineHelpText>Enter the icon reference to display next to this tab&apos;s label.</inlineHelpText>
    <label>Tab Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>