force-app/main/default/objects/AINavTab__mdt/fields/TargetPage__c.field-meta.xml
<CustomField>
    <fullName>TargetPage__c</fullName>
    <description>API name of the Lightning Page this tab navigates to.</description>
    <inlineHelpText>Enter the API name of the page this tab should open.</inlineHelpText>
    <label>Target Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>