force-app/main/default/objects/AINavTab__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>IsDefaultLandingTab__c</columns>
    <columns>TargetPage__c</columns>
    <columns>ExternalURLOverride__c</columns>
    <columns>OpenInNewTab__c</columns>
    <columns>TabIcon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>